dist_man1_MANS=

if BUILD_BLINKHASHD
  dist_man1_MANS+=blinkhashd.1
endif

if ENABLE_QT
  dist_man1_MANS+=blinkhash-qt.1
endif

if BUILD_BLINKHASH_CLI
  dist_man1_MANS+=blinkhash-cli.1
endif

if BUILD_BLINKHASH_TX
  dist_man1_MANS+=blinkhash-tx.1
endif

if BUILD_BLINKHASH_UTIL
  dist_man1_MANS+=blinkhash-util.1
endif

if ENABLE_WALLET
if BUILD_BLINKHASH_WALLET
  dist_man1_MANS+=blinkhash-wallet.1
endif
endif
